Fix html alignment

--- a/static/stylesUsers.css
+++ b/static/stylesUsers.css
@@ -1,4 +1,4 @@
-.balance h2 {
+h2 {
 	display: inline;
 	margin: 0;
 	padding: 0;
